// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField component testing TextField 1`] = `
<DocumentFragment>
  <div
    class="sc-bdvvtL"
  >
    <div
      class="sc-gsDKAQ iXEfkO"
    >
      <input
        class="sc-jRQBWg bfvJhB"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField component testing TextField passward 1`] = `
<DocumentFragment>
  <div
    class="sc-bdvvtL"
  >
    <div
      class="sc-gsDKAQ kJFxMN"
    >
      <input
        class="sc-jRQBWg bfvJhB"
        type="password"
      />
      <div
        class="sc-dkPtRN sc-eCImPb fVDQHx vbNRz"
      >
        <div
          class="sc-gKclnd edtajv"
          size="18"
        >
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0,0H24V24H0Z"
              fill="none"
            />
            <path
              d="M17.882,19.3A11,11,0,0,1,1.181,12a10.982,10.982,0,0,1,3.34-6.066L1.392,2.808,2.807,1.393l19.8,19.8-1.415,1.414-3.31-3.31ZM5.935,7.35A8.965,8.965,0,0,0,3.223,12a9,9,0,0,0,13.2,5.838L14.4,15.81A4.5,4.5,0,0,1,8.19,9.6Zm6.979,6.978L9.672,11.086a2.5,2.5,0,0,0,3.241,3.241Zm7.893,2.264-1.431-1.43A8.935,8.935,0,0,0,20.777,12,9.005,9.005,0,0,0,9.552,5.338L7.974,3.76A11.01,11.01,0,0,1,22.819,12a10.947,10.947,0,0,1-2.012,4.592ZM11.723,7.508a4.5,4.5,0,0,1,4.769,4.769l-4.77-4.769Z"
              fill="#041C33"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField component testing TextField with icon 1`] = `
<DocumentFragment>
  <div
    class="sc-bdvvtL"
  >
    <div
      class="sc-gsDKAQ fomYWt"
    >
      <div
        class="sc-dkPtRN sc-hKwDye fVDQHx bmmLIk"
      >
        <div
          class="sc-gKclnd edtajv"
          size="18"
        >
          <svg
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h18v18H0z"
              fill="none"
            />
            <path
              d="M14.023,12.963l3.212,3.211-1.061,1.061-3.211-3.212a6.751,6.751,0,1,1,1.061-1.06Zm-1.5-.556a5.248,5.248,0,1,0-.112.112l.112-.112Z"
              fill="#959FA9"
              transform="translate(-0.5 -0.5)"
            />
          </svg>
        </div>
      </div>
      <input
        class="sc-jRQBWg bfvJhB"
      />
    </div>
  </div>
</DocumentFragment>
`;
